--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,26 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="container">
+		<div class="ballsLine">
+			<div class="ballElement">
+				<div class="ball"></div>
+			</div>
+			<div class="ballElement">
+				<div class="rope"></div>
+				<div class="ball"></div>
+			</div>
+		</div>
+		<div class="controls">
+			
+		</div>
+	</div>
 	
+	<!-- Clone this one to create another ball on the rope -->
+	<div class="ballElement template">
+		<div class="rope"></div>
+		<div class="ball"></div>
+	</div>
 	<!-- MainScript -->
 	<script src="js/main.js"></script>
 </body>
