JS structure and plus/minus buttons

--- a/app/index.html
+++ b/app/index.html
@@ -14,18 +14,17 @@
 				<div class="ball"></div>
 			</div>
 			<div class="ballElement">
-				<div class="rope"></div>
 				<div class="ball"></div>
 			</div>
 		</div>
 		<div class="controls">
-			
+			<div class="removeBall button">-</div>
+			<div class="addBall button">+</div>
 		</div>
 	</div>
 	
 	<!-- Clone this one to create another ball on the rope -->
 	<div class="ballElement template">
-		<div class="rope"></div>
 		<div class="ball"></div>
 	</div>
 	<!-- MainScript -->
