--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,16 @@
 	<div class="container">
 		<div class="ballsLine">
 			<div class="ballElement">
-				<div class="ball"></div>
+				<div class="ball flyingBallAnim"></div>
 			</div>
 			<div class="ballElement">
-				<div class="ball"></div>
+				<div class="ball flyingBallAnim even"></div>
+			</div>
+			<div class="ballElement">
+				<div class="ball flyingBallAnim"></div>
+			</div>
+			<div class="ballElement">
+				<div class="ball flyingBallAnim even"></div>
 			</div>
 		</div>
 		<div class="controls">
@@ -25,7 +31,7 @@
 	
 	<!-- Clone this one to create another ball on the rope -->
 	<div class="ballElement template">
-		<div class="ball"></div>
+		<div class="ball flyingBallAnim"></div>
 	</div>
 	<!-- MainScript -->
 	<script src="js/main.js"></script>
