--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 	
 	<!-- Clone this one to create another ball on the rope -->
 	<div class="ballElement template">
-		<div class="ball flyingBallAnim"></div>
+		<div class="ball flyingBallAnim glowingAnim"></div>
 	</div>
 	<!-- MainScript -->
 	<script src="js/main.js"></script>
