При нажатии на шар появляется прототип меню

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,22 @@
 		<div class="ballsLine">
 			
 		</div>
-		<div class="controls">
+		<div class="block controls">
 			<div class="removeBall button">-</div>
 			<div class="addBall button">+</div>
+		</div>
+		<div class="block edit-menu disabled">
+			<div class="colors-container">
+			  <div class="button crimson"></div>
+			  <div class="button yellowgreen"></div>
+			  <div class="button green"></div>
+			  <div class="button purple"></div>
+			</div>
+			<div class="sizes-container">
+			  <div class="smSize button"><span>small</span></div>
+			  <div class="mdSize button"><span>medium</span></div>
+			  <div class="lgSize button"><span>large</span></div>
+			</div>
 		</div>
 	</div>
 	
